--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+    @apply relative flex content-center justify-center
+}
