--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,8 +4,24 @@
 @tailwind components;
 @tailwind utilities;
 
-input {
+html {
+    @apply scroll-smooth;
+}
+
+.auth input {
     @apply w-full p-2 rounded-sm duration-[0.35s] bg-white;
+}
+
+.auth hr {
+    @apply border-white/60 inline-block w-28 -translate-y-1 mx-1;
+}
+
+.auth label {
+    @apply block p-2 text-white;
+}
+
+.auth label.required::after {
+    @apply content-['*'] text-blue-300;
 }
 
 /* https://stackoverflow.com/questions/2781549/removing-input-background-colour-for-chrome-autocomplete */
@@ -13,21 +29,10 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
+    box-shadow: 0 0 0 30px white inset !important;
     -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 input:disabled {
     opacity: 0.3;
-}
-
-hr {
-    @apply border-white/60 inline-block w-28 -translate-y-1 mx-1;
-}
-
-label {
-    @apply block p-2 text-white;
-}
-
-label.required::after {
-    @apply content-['*'] text-blue-300;
 }
