--- a/client/src/app.css
+++ b/client/src/app.css
@@ -8,23 +8,23 @@ html {
     @apply scroll-smooth;
 }
 
-:not(.media-page) main {
+main:not(.media-page) {
     @apply relative flex content-center justify-center;
 }
 
-:not(.media-page) input {
+main:not(.media-page) input {
     @apply w-full p-2 rounded-sm duration-[0.35s] bg-white;
 }
 
-:not(.media-page) hr {
+main:not(.media-page) hr {
     @apply border-white/60 inline-block w-28 -translate-y-1 mx-1;
 }
 
-:not(.media-page) label {
+main:not(.media-page) label {
     @apply block p-2 text-white;
 }
 
-:not(.media-page) label.required::after {
+main:not(.media-page) label.required::after {
     @apply content-['*'] text-blue-300;
 }
 
