--- a/client/src/app.css
+++ b/client/src/app.css
@@ -77,7 +77,8 @@ input:disabled {
 
 ::cue {
 	color: white;
-	background-color: rgba(0,0,0,0);
-	text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+	background-color: rgba(0, 0, 0, 0);
+	text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000, -1px -1px 0 #000,
+		1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	-webkit-text-stroke: 1px black;
 }
