[Dev] profile picture front: finish to add profile picture to the front (not connected to the back)

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+	@apply bg-blue-300 text-black;
+}
+
 html {
 	@apply scroll-smooth;
 }
