--- a/client/src/app.css
+++ b/client/src/app.css
@@ -86,3 +86,7 @@ input:disabled {
 		1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	-webkit-text-stroke: 1px black;
 }
+
+.hover-scale {
+	@apply hover:scale-110 transition-all duration-150 invert;
+}
